--- a/less/home-page.less
+++ b/less/home-page.less
@@ -178,7 +178,7 @@
       width: 100px;
 		}
 
-		@media (max-width: 500px) {
+		@media @phone {
 			form {
 				margin-left: 8%;
 			}
