--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,6 +10,8 @@
     // navbar stretch goal below
     position: fixed; // created scrolling nav bar...
     opacity: .95; // ...with slightly decreased opacity 
+    z-index: 1; 
+
 
     .logo {
         .link-styling(none);
